Made final changes to Bazzle axe, added second armor layer, and added new item that is added to the iron ore loot drops.

--- a/src/main/resources/assets/simplehorrorguitarband/lang/en_us.json
+++ b/src/main/resources/assets/simplehorrorguitarband/lang/en_us.json
@@ -1,10 +1,12 @@
 {
+  "item.simplehorrorguitarband.crystalline_shard": "Crystalline Shard",
   "item.simplehorrorguitarband.bazzle_shard": "Bazzling Shard",
   "item.simplehorrorguitarband.bazzle_axe": "Bazzle Axe",
   "item.simplehorrorguitarband.bazzle_helmet": "Bazzle Helmet",
   "item.simplehorrorguitarband.bazzle_chestplate": "Bazzle Chestplate",
   "item.simplehorrorguitarband.bazzle_leggings": "Bazzle Leggings",
   "item.simplehorrorguitarband.bazzle_boots": "Bazzle Boots",
+  "block.simplehorrorguitarband.crystalline_block": "Crystalline Block",
   "block.simplehorrorguitarband.bazzle_block": "Bazzling Block",
   "creativetab.simplehorrorguitarband": "Simple Horror Mod"
 }
